@@ -1,43 +1,42 @@
 package com.example.demo.service.impl;
 
-import com.example.demo.exception.ResourceNotFoundException;
 import com.example.demo.model.Product;
 import com.example.demo.repository.ProductRepository;
+import com.example.demo.exception.ResourceNotFoundException;
 import com.example.demo.service.ProductService;
 import org.springframework.stereotype.Service;
-
+import java.time.LocalDateTime;
 import java.util.List;
 
 @Service
 public class ProductServiceImpl implements ProductService {
 
-    private final ProductRepository productRepository;
+    private final ProductRepository repo;
 
-    public ProductServiceImpl(ProductRepository productRepository) {
-        this.productRepository = productRepository;
+    public ProductServiceImpl(ProductRepository repo) {
+        this.repo = repo;
     }
 
     @Override
     public Product createProduct(Product product) {
-        if (product.getProductName() == null || product.getProductName().trim().isEmpty()) {
-            throw new IllegalArgumentException("Product name must not be empty");
-        }
-        
-        if (productRepository.findBySku(product.getSku()).isPresent()) {
-            throw new IllegalArgumentException("SKU already exists");
-        }
-        
-        return productRepository.save(product);
+        if (product.getProductName() == null || product.getProductName().isBlank())
+            throw new IllegalArgumentException("productName must not be empty");
+
+        repo.findBySku(product.getSku()).ifPresent(p -> {
+            throw new IllegalArgumentException("SKU must be unique");
+        });
+
+        product.setCreatedAt(LocalDateTime.now());
+        return repo.save(product);
     }
 
     @Override
     public Product getProduct(Long id) {
-        return productRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Product not found"));
+        return repo.findById(id).orElseThrow(() -> new ResourceNotFoundException("Product not found"));
     }
 
     @Override
     public List<Product> getAllProducts() {
-        return productRepository.findAll();
+        return repo.findAll();
     }
 }
